# nb-autodoc

./: .gitignore  README.md  README_en.md  mypy.ini  pyproject.toml  test.py
.github/actions/setup-python/: action.yml
.github/workflows/: test.yml
nb_autodoc/: __init__.py  __main__.py  analyzer.py  annotation.py  config.py  importer.py  inspector.py  log.py  manager.py  modulefinder.py  nodes.py  typing.py  utils.py
nb_autodoc/analyzers/: __init__.py  analyzer.py  base.py  definitionfinder.py  unparse_ann.py  utils.py
nb_autodoc/builders/: __init__.py  helpers.py  markdown.py  nodes.py
nb_autodoc/builders/parser/: __init__.py  google.py
nb_autodoc/docstringparser/: __init__.py  google.py
nb_autodoc/parser/: google.py
nb_autodoc/pycode/: __init__.py  annotransformer.py  overload.py  unparser.py  utils.py  vcpicker.py
nb_autodoc/schema/: __init__.py  ast.py  docstring.py
test_pkg/: __init__.py
test_pkg/overload/: __init__.py  typing.py
test_pkg/problems/: __init__.py
test_pkg/pyi/: fuzz.py  fuzz.pyi  util.py
test_pkg/pyi/pkg/: __init__.py  __init__.pyi
tests/: __init__.py  test_analyzer.py  test_annotation.py  test_importer.py  test_inspector.py  test_manager.py  test_modulefinder.py  test_utils.py  utils.py
tests/analyzerdata/: assigndata-override-ast.py  exec_type_checking.py  extract-docstring.py  overload.py  simple-definition-ast.py  type-checking-ast.py
tests/data/: __init__.py  example_google_docstring.py  stuff1.py
tests/data/no-import/: ast_code_with_marker.py
tests/managerdata/: class_instvar_combination.py  single.py  variable_is_typealias.py
tests/managerdata/class_bases/: __init__.py  base.py
tests/managerdata/class_prepare/: instvar.py
tests/managerdata/get_canonical_member/: Foo.py  __init__.py  a.py  b.py
tests/simple_pkg/: __init__.py  typing.py
tests/simple_pkg/namespace/: foo.py
tests/simple_pkg/overload/: __init__.py  __init__.pyi  nopyi.py  typing.py
tests/simple_pkg/pyi/: __init__.py  fuzz.py  fuzz.pyi
tests/simple_pkg/reexport/: __init__.py  _sample.py  inter.py
tests/test_analyzers/: __init__.py  test_analyzer.py  test_definitionfinder.py  test_unparse_ann.py  test_utils.py
tests/test_docstringparser/: test_google.py
tests/test_pkg/: __init__.py  api.py  typing.py
tests/test_pkg/namespace/: foo.py
tests/test_pkg/overload/: __init__.py  __init__.pyi  nopyi.py  relative.py  typing.py
tests/test_pkg/problems/: __init__.py
tests/test_pkg/pyi/: __init__.py  fuzz.py  fuzz.pyi
tests/test_pkg/reexport/: __init__.py
tests/test_pkg/sub/: __init__.py  _reexport_sample.py  member_filter.py
